setting up some framework for UI sections

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,25 @@
 <head>
-  <title>Priceline Local</title>
-  <meta name="viewport" content="width=device-width"
+  <title>Quote Machine</title>
+  <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
 	<!-- this content is handled by routes -->
+	<div class="container-fluid">
+		<div class="row-fluid">
+
+			{{> nav}}
+
+  			<div class="span2">
+    			<!-- left navigation template -->
+    			{{> left_nav}}
+  			</div>
+
+    		<div class="span8">
+    			<!--Body content-->
+    			<p>Something</p>
+  			</div>
+		</div>
+	</div>
 </body>
 
-<template name="home">
-	<!-- some sort of html code -->
-	<h1>Quote Machine</h1>
-</template>
