--- a/client/index.html
+++ b/client/index.html
@@ -4,22 +4,19 @@
 </head>
 
 <body>
-	<!-- this content is handled by routes -->
-	<div class="container-fluid">
-		<div class="row-fluid">
+  <!-- get the top nav -->
+  {{> nav}}
 
-			{{> nav}}
+  <!-- build out the body container -->
+  <div class="container" id="body_container">
+    <div class="row">
+      <!-- get the left nav -->
+      {{> left_nav}}
 
-  			<div class="span2">
-    			<!-- left navigation template -->
-    			{{> left_nav}}
-  			</div>
+      <!-- get the body ui -->
+      {{> main_ui}}
+    </div>
+  </div>
 
-    		<div class="span8">
-    			<!--Body content-->
-    			<p>Something</p>
-  			</div>
-		</div>
-	</div>
 </body>
 
