fixed issue with index template

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,13 @@
 </head>
 
 <body>
-  <!-- get the top nav -->
+
+  <!-- controlled by the routes -->
+
+</body>
+
+<template name="index">
+   <!-- get the top nav -->
   {{> nav}}
 
   <!-- build out the body container -->
@@ -17,6 +23,5 @@
       {{> main_ui}}
     </div>
   </div>
-
-</body>
+</template>
 
