turned the ui body into a well - stubbed out the total html and styling

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,10 @@
 
       <!-- get the body ui -->
       {{> main_ui}}
+
+      <!-- total row -->
+      {{> total_info}}
+
     </div>
   </div>
 </template>
