1) New view - focused on listing out all of the documents available 2) New view has its events stubbed out - need further refinement and testing 3) Selected content is being passed along to the document

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,10 @@
   <div class="container" id="body_container">
     <div class="row">
       <!-- get the left nav -->
-      {{> left_nav}}
+      <div class="span3 bs-docs-sidebar" id="left_bar">
+        {{> left_nav}}
+        {{> available_documents}}
+      </div>
 
       <!-- get the body ui -->
       {{> main_ui}}
