Now its just not fair ;)
1) Added a title field and adjusted some styling to make it fit in

Time to give it a little more pizzaze ??? wtf <--

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
 
   <!-- build out the body container -->
   <div class="container" id="body_container">
+    <!-- document title template -->
+    {{> document_title}}
     <div class="row">
       <!-- get the left nav -->
       <div class="span3 bs-docs-sidebar" id="left_bar">
